--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^20.11.14",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "better-sqlite3": "^9.4.5",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "next": "^14.1.0",
